name:                md2html
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Archimidis/md2html#readme
license:             MIT
license-file:        LICENSE
author:              Nikolas
maintainer:          nvourlakis@gmail.com
copyright:           MIT
category:            Parser
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , parsec >= 3.0.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable md2html-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , md2html
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite md2html-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:     ParserSpec
                     , TestUtils
  build-depends:       base
                     , md2html
                     , protolude >= 0.1.6 && < 0.2
                     , HUnit
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

benchmark md2html-benchmarks
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , md2html
                     , protolude >= 0.1.6 && < 0.2
                     , criterion
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/Archimidis/md2html
